bkup run success step 1